--- a/src/ui/invoice-action/invoice-action.module.scss
+++ b/src/ui/invoice-action/invoice-action.module.scss
@@ -51,7 +51,8 @@
 
     @include mid{
         max-height: calc(100% - 7rem);
-        margin: 3.6875rem 3.5rem 1rem;
+        margin: 3.6875rem 2rem 1rem;
+        padding-right: 1.5rem;
         overflow-y: auto;
     }
 }
